# kaipo-watcher

./: .gitignore  BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md
.kiro/hooks/: rust-docs-sync.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
benches/: bandwidth_benchmarks.rs
data/: packets.db
docs/: API.md  ARCHITECTURE.md  CODE_ORGANIZATION.md  DASHBOARD_MODULE.md  DEVELOPMENT.md  DOMAIN_MODEL.md  KNOWN_ISSUES.md
src/: lib.rs  main.rs
src/analyzers/: mod.rs  protocol_analyzer.rs
src/cli/: commands.rs  dashboard.rs  graph_commands.rs  mod.rs  packet_commands.rs
src/collectors/: bandwidth_collector.rs  mod.rs  packet_collector.rs
src/collectors/bandwidth/: collector.rs  errors.rs  formatting.rs  mod.rs  reporting.rs  stats.rs  validation.rs
src/collectors/bandwidth/tests/: collector_tests.rs  integration_tests.rs  mod.rs  reporting_tests.rs  validation_tests.rs
src/collectors/platform/: interface_manager.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/dashboard/: live_dashboard.rs  mod.rs
src/graphs/: bandwidth_graphs.rs  connection_graphs.rs  export.rs  mod.rs  protocol_graphs.rs
src/models/: mod.rs  packet.rs
src/storage/: mod.rs  packet_storage.rs  schema.rs
tests/: bandwidth_advanced_integration_tests.rs  bandwidth_comprehensive_integration_tests.rs  bandwidth_edge_cases.rs  bandwidth_integration_tests.rs
