[package]
name = "kaipo-watcher"
version = "0.2.0"
edition = "2024"
authors = ["Kaipo Chen"]
description = "A command-line tool for monitoring internet usage, bandwidth, and network packets"
license = "MIT"

[[bin]]
name = "kw"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Terminal UI
ratatui = "0.30.0-alpha.5"
crossterm = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System information
sysinfo = "0.35"

# Network monitoring (we'll add platform-specific ones later)
pnet = "0.35"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Configuration
config = "0.15"

# For getting network statistics
if-addrs = "0.13"

# Async traits
async-trait = "0.1"

# Graphing and visualization
plotters = "0.3"
textplots = "0.8"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["user"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
criterion = "0.5"
reqwest = "0.11"
